tests/compile_fail/skip_attr.stderr
error: missing field `skipped` in initializer
  --> tests/compile_fail/skip_attr.rs:28:9
   |
28 |     X { .. };
   |         ^ fields that do not have a defaulted value must be provided explicitly

error: missing field `skipped` in initializer
  --> tests/compile_fail/skip_attr.rs:29:14
   |
29 |     Foo::A { .. };
   |              ^ fields that do not have a defaulted value must be provided explicitly

error: missing field `skipped` in initializer
  --> tests/compile_fail/skip_attr.rs:30:14
   |
30 |     Foo::B { .. };
   |              ^ fields that do not have a defaulted value must be provided explicitly
